<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_with_shadow"
    android:orientation="vertical">

    <com.censorchi.utils.NoPaddingTextView
        android:id="@+id/tv_censor_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:fontFamily="@font/robotorondensed_bold"
        android:gravity="center_horizontal|top"
        android:letterSpacing="0.1"
        android:includeFontPadding="false"
        android:text="@string/censor_x"
        android:textAllCaps="true"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/_36ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.censorchi.utils.NoPaddingTextView
        android:id="@+id/tv_blur_faces_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotorondensed_bold"
        android:paddingStart="@dimen/_5sdp"
        android:text="@string/blur_faces_in_pictures_and_videos"
        android:textAllCaps="true"
        android:includeFontPadding="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_censor_x" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_60sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_select_media_to_censor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/helvetica"
            android:text="@string/select_media_to_censor"
            android:textColor="@color/grey_secondary"
            android:textSize="@dimen/_10ssp" />


        <RelativeLayout
            android:id="@+id/iv_takeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/backgroundround">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/ic_gallery" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_open_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10ssp"
            android:fontFamily="@font/helvetica"
            android:text="@string/open_image"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tv_open_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10ssp"
            android:fontFamily="@font/helvetica"
            android:text="@string/open_video"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/helvetica"
        android:gravity="bottom"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>